--- a/css/index.css
+++ b/css/index.css
@@ -112,8 +112,6 @@ body {
   width: 100%;
   line-height: 1;
   position: relative;
-  display: flex;
-  flex-direction: column;
 }
 
 ul {
@@ -136,6 +134,7 @@ h2 {
   top: 0;
   left: 0;
   right: 0;
+  background-color: #fff;
 }
 
 .header__sub-container {
@@ -212,13 +211,45 @@ h2 {
   margin: 15px 0;
 }
 
+.helpful-container {
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: sticky;
+  width: 200px;
+  height: 130px;
+  top: 20%;
+  left: 10px;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: #F2F1EE;
+  opacity: 0.5;
+  transition: opacity 0.3s;
+}
+
+.helpful-container:hover {
+  opacity: 1;
+}
+
+.link {
+  font-size: 1.5rem;
+  margin: 5px 0;
+}
+
 .main {
-  margin-top: 65px;
-  background-color: white;
-  flex: 1 1 50vh;
+  border: 1px solid red;
+  margin-top: -50px
+}
+
+.scene {
+  background: url("../images/backdrops/home-first.jpg") no-repeat fixed center / cover;
+  height: 80vh;
 }
 
 .footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
   height: 80px;
 }
 
@@ -237,11 +268,6 @@ h2 {
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-}
-
-.link {
-  font-size: 1.3rem;
-  margin: 5px 0;
 }
 
 .copyrights {
