--- a/css/index.css
+++ b/css/index.css
@@ -220,27 +220,6 @@ h2 {
   margin: 15px 0;
 }
 
-.helpful-container {
-  display: inline-flex;
-  flex-direction: column;
-  justify-content: space-between;
-  position: sticky;
-  width: 200px;
-  height: 130px;
-  top: 150vh;
-  left: 10px;
-  padding: 20px;
-  border-radius: 10px;
-  background-color: #F2F1EE;
-  opacity: 0.5;
-  transition: opacity 0.3s;
-  z-index: 2;
-}
-
-.helpful-container:hover {
-  opacity: 1;
-}
-
 .link {
   font-size: 1.5rem;
   margin: 5px 0;
@@ -309,18 +288,19 @@ h2 {
 }
 
 .footer {
+  position: relative;
   width: 100%;
-  height: 80px;
 }
 
 .footer__sub-container{
+  padding: 20px;
   width: 95%;
   height: 100%;
   margin: auto;
   border-top: 1px solid #dbdbdb;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .vertical-alignment {
@@ -330,8 +310,34 @@ h2 {
   align-items: flex-start;
 }
 
-.copyrights {
+.contact-us-text {
   font-size: 1.4rem;
+  margin: 5px 0;
+}
+
+.icon {
+  display: inline-block;
+  width: 32px;
+  height: 32px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.icon_twitter{
+  background-image: url("../images/icons/twitter-square-brands.svg");
+}
+
+.icon_facebook {
+  background-image: url("../images/icons/facebook-square-brands.svg");
+}
+
+.copyrights {
+  align-self: flex-end;
+}
+
+.copyrights__text {
+  font-size: 1.6rem;
+  font-style: italic;
 }
 
 @media (max-width: 768px) {
