--- a/css/index.css
+++ b/css/index.css
@@ -311,11 +311,13 @@ h2 {
 
 .card-container__item__text {
   width: 80%;
+  text-align: center;
 }
 
 .footer {
   position: relative;
   width: 100%;
+  margin-top: 20px;
 }
 
 .footer__sub-container{
