--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Marcellus+SC&display=swap');
 
 html,
 body,
@@ -104,6 +104,7 @@ section {
 
 html {
   font-size: 10px;
+  font-family: 'Marcellus SC', serif;
 }
 
 body {
@@ -121,6 +122,10 @@ ul {
 a {
   text-decoration: none;
   color: #000;
+}
+
+h1, h2, h3 {
+  font-family: 'Anton', sans-serif;
 }
 
 h1 {
@@ -369,16 +374,15 @@ h2 {
 
 .about-article{
   position: relative;
-  height: 40vh;
   display: flex;
 }
 
 .about-article__sub-container{
+  width: 100%;
   padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
 }
 
 .about-article__text {
@@ -387,9 +391,21 @@ h2 {
   font-size: 2.5rem;
 }
 
+.about-article__title {
+  margin-bottom: 10px;
+}
+
+.about-article_first-background {
+  background: url("../images/backdrops/about-first.jpg") no-repeat fixed center / cover;
+}
+
+.about-article_second-background {
+  background: url("../images/backdrops/about-second.jpg") no-repeat fixed center / cover;
+}
+
 .photo {
   padding: 20px;
-  height: 80%;
+  max-height: 300px;
 }
 
 
@@ -424,18 +440,6 @@ h2 {
   padding: 30px;
   background: url("../images/backdrops/home-second.jpg") no-repeat fixed top / cover;
   color: #fff;
-}
-
-.about-article {
-
-}
-
-.about-article_first-background {
-  background: url("../images/backdrops/about-first.jpg") no-repeat fixed center / cover;
-}
-
-.about-article_second-background {
-  background: url("../images/backdrops/about-second.jpg") no-repeat fixed center / cover;
 }
 
 @media (max-width: 768px) {
