--- a/css/index.css
+++ b/css/index.css
@@ -102,6 +102,13 @@ section {
   display: block;
 }
 
+::selection {
+  background: rgba(194, 157, 47, 0.3);
+}
+::-moz-selection {
+  background: rgba(194, 157, 47, 0.3);
+}
+
 html {
   font-size: 10px;
   font-family: 'Marcellus SC', serif;
@@ -111,7 +118,6 @@ body {
   min-height: 100vh;
   height: 100%;
   width: 100%;
-  line-height: 1;
   position: relative;
 }
 
@@ -467,5 +473,9 @@ h2 {
   .card-container__item{
     width: 100%;
     margin-bottom: 10px;
+  }
+
+  .photo {
+    display: none;
   }
 }
