--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Anton&family=Marcellus+SC&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Cinzel:wght@700&family=Marcellus+SC&display=swap');
 
 html,
 body,
@@ -110,15 +110,18 @@ section {
 }
 
 html {
+  height: 100%;
   font-size: 10px;
   font-family: 'Marcellus SC', serif;
+  margin:0;padding:0;
 }
 
 body {
-  min-height: 100vh;
-  height: 100%;
+  min-height: 100%;
   width: 100%;
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 ul {
@@ -238,6 +241,7 @@ h2 {
 
 .main {
   margin-top: 150px;
+
 }
 
 .scene {
@@ -263,7 +267,8 @@ h2 {
   background-color: #577786;
   color: #fff;
   z-index: 1;
-  width: 200px;
+  width: 50%;
+  max-width: 200px;
   height: 50px;
   font-size: 2rem;
   border-radius: 10px;
@@ -328,12 +333,14 @@ h2 {
   position: relative;
   width: 100%;
   margin-top: 20px;
+  padding: 20px;
+  box-sizing: border-box;
 }
 
 .footer__sub-container{
-  padding: 20px;
   width: 95%;
   height: 100%;
+  padding: 20px;
   margin: auto;
   border-top: 1px solid #dbdbdb;
   display: flex;
@@ -418,6 +425,9 @@ h2 {
   max-height: 300px;
 }
 
+.address{
+  font-family: 'Cinzel', serif;
+}
 
 .mt10 {
   margin-top: 10px;
@@ -425,6 +435,10 @@ h2 {
 
 .mb10 {
   margin-bottom: 10px;
+}
+
+.fs1-5 {
+  font-size: 1.5rem;
 }
 
 .fs2 {
@@ -452,7 +466,46 @@ h2 {
   color: #fff;
 }
 
-@media (max-width: 768px) {
+.contact-form__container {
+  background-color: #000;
+  padding: 20px;
+  border-radius: 10px;
+  color: #fff;
+  height: 100%;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.contact-form__input {
+  width: 50%;
+  margin-bottom: 5px;
+}
+
+.information-block {
+  padding: 20px;
+  display: flex;
+  justify-content: space-around;
+}
+
+@media screen and (max-width: 1440px) {
+  .information-block {
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  html {
+    font-size: 9px;
+  }
+}
+
+@media screen and (max-width: 768px) {
   html {
     font-size: 8px;
   }
