--- a/css/index.css
+++ b/css/index.css
@@ -145,8 +145,8 @@ h2 {
   font-size:  3rem;
 }
 
-.bold {
-  font-weight: bold;
+h3 {
+  font-size: 2.5rem;
 }
 
 .header {
@@ -557,6 +557,47 @@ h2 {
   background-color: #ffd700;
 }
 
+.catalog-item {
+  background-color: #f6f6f6;
+  width: 50%;
+  margin: 10px auto;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+}
+
+.catalog-item__price {
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: #577786;
+  color: #fff;
+  padding: 3px;
+  font-size: 1.5rem;
+  font-style: italic;
+}
+
+.catalog-item__sub-container {
+  justify-self: flex-start;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-start;
+  margin-left: 5px;
+  margin-right: auto;
+}
+
+.catalog-item__image {
+  width: 300px;
+  display: inline-block;
+}
+
+.catalog-item__button {
+  display: inline-block;
+  align-self: flex-end;
+  margin-bottom: 10px;
+  margin-right: 10px;
+}
 
 @media screen and  (max-width: 2150px){
   .service-block {
